# ToDoProject

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  resources.qrc
.github/workflows/: ci.yml  pages.yml
accounts/: account.cpp  account.h  authManager.cpp  authManager.h
authWindow/: loginWindow.cpp  loginWindow.h  loginWindow.ui  registerWindow.cpp  registerWindow.h  registerWindow.ui
databaseManager/: TaskRepository.cpp  TaskRepository.h  accountRepository.cpp  accountRepository.h  databaseManager.cpp  databaseManager.h
databaseManager/SQLUtilities/: SQLUtils.cpp  SQLUtils.h
logger/: globalLogger.cpp  globalLogger.h  logger.cpp  logger.h
mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  taskEditorWindow.cpp  taskEditorWindow.h  taskEditorWindow.ui  taskItemWidget.cpp  taskItemWidget.h  taskItemWidget.ui
metrics/: cloc.txt  lizard.txt
settings/: SettingsWindow.ui  appSettings.cpp  appSettings.h  settingsWindow.cpp  settingsWindow.h
styles/: main.qss  main_dark.qss
tasks/: ITaskObserver.h  TaskManager.cpp  TaskManager.h  task.cpp  task.h
tests/: CMakeLists.txt  friend_mainwindow.h  integration_full_workflow.cpp  test_account_and_repo.cpp  test_account_repository_negative.cpp  test_appsettings.cpp  test_authmanager.cpp  test_database_manager.cpp  test_framelesswindow.cpp  test_logger.cpp  test_login_register_negative_qt.cpp  test_loginwindow_qt.cpp  test_main_with_qapp.cpp  test_mainwindow_qt.cpp  test_registerwindow_qt.cpp  test_settingswindow_qt.cpp  test_settingswindow_theme_signal.cpp  test_sql_error_paths.cpp  test_sqlutils.cpp  test_task.cpp  test_task_manager.cpp  test_task_manager_edges.cpp  test_task_repository.cpp  test_task_repository_negative.cpp  test_taskeditor_qt.cpp  test_taskitemwidget_qt.cpp
uml/: CommunicationDiagram.html  CompositeStructureDiagram.html  DeploymentDiagram.html  InteractionOverviewDiagram.html  PackageDiagram.html  SequenceDiagram.html  StateDiagram.html  UseCaseDiagram.html  activityDiagram.html  classDiagram.html  componentDiagram.html  objectDiagram.html  timingDiagram.html
windowEdit/: framelessWindow.cpp  framelessWindow.h  snapPreviewWindow.cpp  snapPreviewWindow.h
